[tool.poetry]
name = "tradingview-defi-strategy"
version = "0.1.0"
description = "An example how to convert PineScript based algorithmig trading strategy for DeFi"
authors = ["Mikko Ohtamaa <mikko@opensourcehacker.com>"]
readme = "README.md"
packages = [{include = "onchain_quant_workshop"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pytest = "^7.3.0"
trade-executor = {git = "https://github.com/tradingstrategy-ai/trade-executor.git", extras = ["web-server", "execution", "quantstats", "data"], rev = "27ff8d4518ac4518509a283ce71eba583e08ad24" }
ipython = "^8.12.0"
#python-dotenv = "^1.0.0"
ipdb = "^0.13.13"
fastapi = "^0.95.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
