[tool.poetry]
name = "tradingview-defi-strategy"
version = "0.1.0"
description = "Convert TradingView and PineScript based algorithmig trading strategies for DeFi. An example repository."
authors = ["Mikko Ohtamaa <mikko@opensourcehacker.com>"]
license = "MIT"
readme = "README.md"
keywords = ["algorithmic trading", "ethereum", "cryptocurrency", "tradingview", "quantitative finance", "binance", "coinbase", "uniswap"]
homepage = "https://tradingstrategy.ai"
repository = "https://github.com/tradingstrategy-ai/tradingview-defi-strategy"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pytest = "^7.3.0"
# trade-executor = {version = "0.3", extras = ["web-server", "execution", "quantstats", "data"]}
trade-executor = {git = "https://github.com/tradingstrategy-ai/trade-executor.git", extras = ["web-server", "execution", "quantstats", "data"], rev = "82d353fcdffe8647f0a04790040e4ca177c726a3" }
ipython = "^8.12.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
